--- a/app/index.html
+++ b/app/index.html
@@ -113,7 +113,7 @@
 
 <head>
    <meta charset="UTF-8">
-   <title>HCA Healthcare</title>
+   <title>Parallon</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <link rel="icon" type="image/x-icon" href="favicon.ico">
    <link rel="stylesheet" href="styles/bootstrap.min.css">
